--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   ],
   "main": "./lib",
   "dependencies": {
-    "koa-static": "^1.4.9",
+    "debug": "^2.2.0",
+    "koa-send": "^1.3.1",
     "uglify-js": "^2.4.21",
     "clean-css": "^3.2.8",
     "lodash": "~3.7.0",
